Compostiting, Bad AA using distort + undistort nodes #47210

Closed
opened 2016-01-20 01:10:09 +01:00 by Nahuel Belich · 7 comments

System Information
win 7 x64

Blender Version
Broken: hash: 257268a
Worked: (optional)

Short description of error

Blender [CUsersPCDesktopDISTORTplusUNDISTORT bad AA.blend].jpg
Using an undistort node after being distorted generates bad Antialiasing.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

**System Information** win 7 x64 **Blender Version** Broken: hash: 257268a Worked: (optional) **Short description of error** ![Blender [CUsersPCDesktopDISTORTplusUNDISTORT bad AA.blend].jpg](https://archive.blender.org/developer/F275249/Blender__CUsersPCDesktopDISTORTplusUNDISTORT_bad_AA.blend_.jpg) Using an undistort node after being distorted generates bad Antialiasing. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Author

Step to reproduce the error:
1-DISTORT EXAMPLE.rar unrar and open
2-reload clip(actually a single image)
3-play with the setup at the compositor or follow the next steps.
4-change distortion K value in the clip editor.
5-load the clip in the node editor
6-add two "Movie distortion" nodes
7- set up one after the other, distor > undistort

Step to reproduce the error: 1-[DISTORT EXAMPLE.rar](https://archive.blender.org/developer/F275253/DISTORT_EXAMPLE.rar) unrar and open 2-reload clip(actually a single image) 3-play with the setup at the compositor or follow the next steps. 4-change distortion K value in the clip editor. 5-load the clip in the node editor 6-add two "Movie distortion" nodes 7- set up one after the other, distor > undistort

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2016-01-22 16:10:57 +01:00

Totally unsure whether this is a bug or not… @Sergey should know. :)

Totally unsure whether this is a bug or not… @Sergey should know. :)

This issue was referenced by 81a1b002a0

This issue was referenced by 81a1b002a094cd88d584e956e48d562fbad31592

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47210
No description provided.